# LdSpark

./: CMakeLists.txt  README.md  addproxywidget.cpp  addproxywidget.h  addproxywidget.ui  addtask.cpp  addtask.h  addtask.ui  exportgraphwidget.cpp  exportgraphwidget.h  exportgraphwidget.ui  http.cpp  http.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  responseinfowidget.cpp  responseinfowidget.h  responseinfowidget.ui  style.qrc  task.cpp  task.h  tasklistitem.cpp  tasklistitem.h  tasklistitem.ui  tinyproxy.conf
.cache/clangd/index/: addproxywidget.cpp.4D78538ADCCB4571.idx  addproxywidget.cpp.ECC1E9BF00484AA9.idx  addproxywidget.cpp.FA1714095E8EFFF2.idx  addproxywidget.h.029C84BF34867A43.idx  addproxywidget.h.805C57324881C9E3.idx  addproxywidget.h.C3585A1440AC1FB4.idx  addtask.cpp.098C923124C751C6.idx  addtask.cpp.412AAD662F7E1ACF.idx  addtask.cpp.61C17C8457817248.idx  addtask.h.4343E3CD58BF637E.idx  addtask.h.D6500AEFC007D5BF.idx  addtask.h.E3CF24F32ED70975.idx  exportgraphwidget.cpp.20BCD146131BF44D.idx  exportgraphwidget.cpp.AE7688CDE9F3328B.idx  exportgraphwidget.cpp.FD31DA7C880CB1EC.idx  exportgraphwidget.h.284CB8A327541C7E.idx  exportgraphwidget.h.517C625B2BF6FAAD.idx  exportgraphwidget.h.A81EE513A9143562.idx  http.cpp.9853C06F60281453.idx  http.cpp.BDA17C44353FFE9C.idx  http.cpp.C2C4726F6F345B61.idx  http.h.9990CDC7F5F8B99B.idx  http.h.B50BD9FB933F0557.idx  http.h.E13C1069BEEB3215.idx  main.cpp.1E6362B3524AC4FA.idx  main.cpp.8EA70B045BD13180.idx  main.cpp.AA7B1FF1EC02FAE8.idx  mainwindow.cpp.2326CD902C7681BC.idx  mainwindow.cpp.4898A88F9563B26B.idx  mainwindow.cpp.9E9534AB56D310EA.idx  mainwindow.h.96AA2927657B3E09.idx  mainwindow.h.C25C0D237148B806.idx  mainwindow.h.F9E557C7E1A54EE4.idx  model.cpp.008734624CDEEFEA.idx  model.cpp.63738691E0B037BD.idx  model.cpp.A57BC188235F2EC1.idx  model.h.051D7A6D7F5DC9F5.idx  model.h.C9BD392828A1FE56.idx  model.h.CE8CC3D4C50965D5.idx  responseinfowidget.cpp.2E2F6C0163AEAB15.idx  (+17 more)
etc/tinyproxy/: tinyproxy.conf
mappings/: test.json
qss/: blacksoft.css  flatgray.css  lightblue.css
share/man/man5/: tinyproxy.conf.5
share/man/man8/: tinyproxy.8
